dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: armdocker.rnd.ericsson.se/dockerhub-ericsson-remote/nginx:1.21.0
          ports:
            - containerPort: 80
