dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: epulvam-ingress
spec:
  rules:
    # Edit the hostname to fit your environment.
    - host: http://nginx.vamshi.primus.bbi-ci.rnd.gic.ericsson.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  name: http
